--- a/app/src/main/res/layout/item_local_stuff.xml
+++ b/app/src/main/res/layout/item_local_stuff.xml
@@ -11,20 +11,10 @@
         android:adjustViewBounds="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
+        android:layout_alignRight="@+id/tvDummy"
+        android:layout_alignEnd="@+id/tvDummy"
+        android:layout_below="@+id/tvDummy"
     />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Title"
-        android:id="@+id/tvTitle"
-        android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/ivIcon"
-        android:layout_toEndOf="@+id/ivIcon"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
 
     <ImageView
         android:layout_width="50dp"
@@ -33,23 +23,49 @@
         android:scaleType="fitCenter"
         android:adjustViewBounds="true"
         android:id="@+id/ivIcon"
-        android:layout_alignParentTop="true"
+        android:layout_below="@id/tvDummy"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
+<!--    android:layout_alignParentTop="true" -->
+
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Desc"
+        android:text="@string/item_title"
+        android:id="@+id/tvTitle"
+        android:textStyle="bold"
+        android:layout_alignTop="@id/ivIcon"
+        android:layout_alignRight="@+id/tvDesc"
+        android:layout_alignEnd="@+id/tvDesc"
+        android:layout_toRightOf="@+id/ivIcon"
+        android:layout_toEndOf="@+id/ivIcon" />
+    <!--        android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            -->
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/item_desc"
         android:id="@+id/tvDesc"
         android:layout_toRightOf="@+id/ivIcon"
         android:layout_toEndOf="@+id/ivIcon"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
         android:layout_below="@+id/tvTitle"
+        android:layout_alignRight="@id/tvDummy"
+        android:layout_alignEnd="@id/tvDummy"
         android:autoLink="all"
         android:linksClickable="true"
         android:maxLines="3"
         android:ellipsize="end" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="1dp"
+        android:id="@+id/tvDummy"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
