--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -5,7 +5,7 @@
     <item android:id="@+id/action_search"
         android:orderInCategory="1"
         android:title="@string/search"
-        android:icon="@mipmap/ic_action_search"
+        android:icon="@mipmap/ic_action_search_white"
         app:showAsAction="always|collapseActionView"
         app:actionViewClass="android.support.v7.widget.SearchView"
         />
