--- a/app/src/main/res/layout/item_local_stuff.xml
+++ b/app/src/main/res/layout/item_local_stuff.xml
@@ -14,7 +14,7 @@
         android:layout_alignRight="@+id/tvDummy"
         android:layout_alignEnd="@+id/tvDummy"
         android:layout_below="@+id/tvDummy"
-    />
+        android:layout_margin="5dp" />
 
     <ImageView
         android:layout_width="50dp"
@@ -25,7 +25,8 @@
         android:id="@+id/ivIcon"
         android:layout_below="@id/tvDummy"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_margin="5dp" />
 <!--    android:layout_alignParentTop="true" -->
 
 
@@ -38,7 +39,8 @@
         android:layout_alignTop="@id/ivIcon"
         android:layout_toLeftOf="@+id/ivProviderIcon"
         android:layout_toRightOf="@+id/ivIcon"
-        android:layout_toEndOf="@+id/ivIcon" />
+        android:layout_toEndOf="@+id/ivIcon"
+        android:layout_marginRight="5dp" />
     <!--        android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             -->
@@ -56,7 +58,11 @@
         android:autoLink="all"
         android:linksClickable="true"
         android:maxLines="3"
-        android:ellipsize="end" />
+        android:ellipsize="end"
+        android:layout_marginRight="5dp"
+        android:enabled="false"
+        android:textColor="@android:color/darker_gray"
+        android:layout_marginTop="5dp" />
 
     <ImageView
         android:layout_width="16dp"
